Simplified to show the latest release

--- a/index.html
+++ b/index.html
@@ -13,15 +13,9 @@
     <div class="wrapper">
         <h1 class="title">Action Comics</h1>
         <div class="issue-card">
-            <h2>This Month</h2>
-            <h3>Action Comics 1077</h3>
-            <h4>Cover Date: 2025-01-01</h4>
-            <img src="https://comicvine.gamespot.com/a/uploads/scale_medium/11/110017/9546457-wwww.jpg" alt="Action Comics Cover" style="width: 200px;">
-        </div>
-        <div class="issue-card">
-            <h2>Next Month</h2>
+            <h2>Latest Release:</h2>
             <h3>Action Comics 1082</h3>
-                <h4>Cover Date: 2025-03-01</h4>
+                <h4>Store Date: 2025-01-15</h4>
             <img src="https://comicvine.gamespot.com/a/uploads/scale_medium/11/110017/9599474-wwww.jpg" alt="Action Comics Cover" style="width: 200px;">
         </div>
     </div>
