--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -14,9 +13,13 @@
         <h1 class="title">Action Comics</h1>
         <div class="issue-card">
             <h2>Latest Release:</h2>
-            <h3>Action Comics 1082</h3>
-                <h4>Store Date: 2025-01-15</h4>
-            <img src="https://comicvine.gamespot.com/a/uploads/scale_medium/11/110017/9599474-wwww.jpg" alt="Action Comics Cover" style="width: 200px;">
+            <h3><a href="https://comicvine.gamespot.com/action-comics-1082-force-majeure-part-one/4000-1090251/"
+                    target="_blank">Action Comics 1082</a></h3>
+            <h4>Store Date: 2025-01-15</h4>
+            <a href="https://comicvine.gamespot.com/action-comics-1082-force-majeure-part-one/4000-1090251/"
+                target="_blank"><img
+                    src="https://comicvine.gamespot.com/a/uploads/scale_medium/11/110017/9599474-wwww.jpg"
+                    alt="Action Comics Cover" style="width: 200px;"></a>
         </div>
     </div>
 </body>
