Added description and updated styling to bring in more fonts and responsivity

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -12,14 +13,19 @@
     <div class="wrapper">
         <h1 class="title">Action Comics</h1>
         <div class="issue-card">
-            <h2>Latest Release:</h2>
-            <h3><a href="https://comicvine.gamespot.com/action-comics-1082-force-majeure-part-one/4000-1090251/"
-                    target="_blank">Action Comics 1082</a></h3>
-            <h4>Store Date: 2025-01-15</h4>
-            <a href="https://comicvine.gamespot.com/action-comics-1082-force-majeure-part-one/4000-1090251/"
-                target="_blank"><img
-                    src="https://comicvine.gamespot.com/a/uploads/scale_medium/11/110017/9599474-wwww.jpg"
-                    alt="Action Comics Cover" style="width: 200px;"></a>
+            <div class="cover">
+                <img
+                    src="https://comicvine.gamespot.com/a/uploads/scale_medium/11/110017/9599474-wwww.jpg" alt="Action Comics Cover">
+                </div>
+                <div class="info">
+                    <h2>Latest Release:</h2>
+                    <h3 class="issue-title">Action Comics #1082</h3>
+                    <p>January 14, 2025
+                    </p>
+                    <div class="description"><p><em>"Superman Superstars" continues with an unforgettable tale about Superman's greatest gift to the world...hope.</em></p><p><em>Major Disaster returns to Metropolis and his old ways much to the dismay of the Man of Steel. Can his alter ego Clark Kent discover the reason behind this villain's decline back into the world of crime?</em></p></div>
+                    <a href="https://comicvine.gamespot.com/action-comics-1082-force-majeure-part-one/4000-1090251/"
+                        target="_blank"><button>More Info</button></a>
+                </div>
         </div>
     </div>
 </body>
